--- a/news.html
+++ b/news.html
@@ -6,6 +6,7 @@
     <title>Elf Drinks - News</title>
     <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="/style-news.css">
+    <link rel="shortcut icon" href="/img/tea-logo.png" type="image/x-icon">
 </head>
 <body>
     <main>
