--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Elf Drinks</title>
     <link rel="stylesheet" href="/style.css">
+    <link rel="shortcut icon" href="/img/tea-logo.png" type="image/x-icon">
 </head>
 
 <body>
