--- a/pages/coffe/main-coffe.html
+++ b/pages/coffe/main-coffe.html
@@ -7,6 +7,7 @@
     <title>Elf Drinks - Tea</title>
     <link rel="stylesheet" href="/pages/tea/style-tea.css">
     <link rel="stylesheet" href="/style.css">
+    <link rel="shortcut icon" href="/img/tea-logo.png" type="image/x-icon">
 </head>
 
 <body>
